OpenAI reworked; **BUILD IS BROKEN**